ESURVEY-6733 creation, answering and first draft of results working

--- a/src/main/config/oss/spring.properties
+++ b/src/main/config/oss/spring.properties
@@ -120,6 +120,8 @@ opc.notify=
 opc.department=
 opc.template=
 opc.redirect=
+## ECF configuration
+ecf.template=theEcfSurvey
 ## OTHER
 webservice.maxrequestsperday=100
 app.server.env=
