--- a/pom.xml
+++ b/pom.xml
@@ -253,7 +253,7 @@
 		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
-			<version>2.0.2</version>
+			<version>1.4.01</version>
 		</dependency>
 
 		<!-- Spring -->
@@ -735,6 +735,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.4</version>
 				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<webResources>
 						<resource>
 						<!-- Copies src/main/config/environment/ehcache.xml to  -->
