--- a/src/main/webapp/WEB-INF/spring.properties
+++ b/src/main/webapp/WEB-INF/spring.properties
@@ -120,6 +120,8 @@ opc.notify=
 opc.department=
 opc.template=
 opc.redirect=
+## ECF configuration
+ecf.template=theEcfSurvey
 ## OTHER
 webservice.maxrequestsperday=100
 app.server.env=
