ESURVEY-6733: ESURVEY-6895: for activating or deactivating the module

--- a/src/main/config/oss/spring.properties
+++ b/src/main/config/oss/spring.properties
@@ -41,8 +41,8 @@ host.executing.task=
 workerpermission=hasAnyRole('ROLE_USER_ADMIN','ROLE_RIGHT_ADMIN')
 ## MAIL configuration
 mail.mailPoolSize=2
-smtpserver=smtp.server.com
-smtp.port=25
+smtpserver=0.0.0.0
+smtp.port=1025
 sender=info@myServer.com
 publicsurveynotification=AnEmailAdress@DontLeaveEmpty.empty
 server.mt.response.callback=http://localhost:8080/eusurvey/
@@ -106,6 +106,7 @@ ui.enableresponsive=false
 ui.enablefilemanagement=true
 ui.enableopc=false
 ui.enablepublicsurveys=false
+ui.enableecf=true
 show.privacy=true
 ## CAPTCHA configuration
 captcha.bypass=true
