--- a/src/main/webapp/WEB-INF/spring.properties
+++ b/src/main/webapp/WEB-INF/spring.properties
@@ -41,8 +41,8 @@ host.executing.task=
 workerpermission=hasAnyRole('ROLE_USER_ADMIN','ROLE_RIGHT_ADMIN')
 ## MAIL configuration
 mail.mailPoolSize=2
-smtpserver=smtp.server.com
-smtp.port=25
+smtpserver=0.0.0.0
+smtp.port=1025
 sender=info@myServer.com
 publicsurveynotification=AnEmailAdress@DontLeaveEmpty.empty
 server.mt.response.callback=http://localhost:8080/eusurvey/
@@ -105,6 +105,7 @@ ui.enablearchiving=false
 ui.enableresponsive=false
 ui.enablefilemanagement=true
 ui.enableopc=false
+ui.enableecf=true
 ui.enablepublicsurveys=false
 show.privacy=true
 ## CAPTCHA configuration
